WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114121
[GTK] Windows build failure after
r136056
https://bugs.webkit.org/show_bug.cgi?id=114121
Summary
[GTK] Windows build failure after r136056
Kalev Lember
Reported
2013-04-07 09:55:39 PDT
CXX Source/WebCore/platform/graphics/cairo/Programs_TestWebKitAPI_TestGtk-IntRectCairo.o ../Source/WebCore/platform/graphics/cairo/IntRectCairo.cpp:28:1: error: prototype for 'WebCore::IntRect::IntRect(const cairo_rectangle_int_t&)' does not match any in class 'WebCore::IntRect' IntRect::IntRect(const cairo_rectangle_int_t& r) ^ In file included from ../Source/WebCore/platform/graphics/cairo/IntRectCairo.cpp:22:0: ../Source/WebCore/platform/graphics/IntRect.h:82:7: error: candidates are: WebCore::IntRect::IntRect(const WebCore::IntRect&) class IntRect { ^ ../Source/WebCore/platform/graphics/IntRect.h:92:14: error: WebCore::IntRect::IntRect(const WebCore::LayoutRect&) explicit IntRect(const LayoutRect&); // don't do this implicitly since it's lossy ^ ../Source/WebCore/platform/graphics/IntRect.h:91:14: error: WebCore::IntRect::IntRect(const WebCore::FloatRect&) explicit IntRect(const FloatRect&); // don't do this implicitly since it's lossy ^ ../Source/WebCore/platform/graphics/IntRect.h:88:5: error: WebCore::IntRect::IntRect(int, int, int, int) IntRect(int x, int y, int width, int height) ^ ../Source/WebCore/platform/graphics/IntRect.h:86:5: error: WebCore::IntRect::IntRect(const WebCore::IntPoint&, const WebCore::IntSize&) IntRect(const IntPoint& location, const IntSize& size) ^ ../Source/WebCore/platform/graphics/IntRect.h:85:5: error: WebCore::IntRect::IntRect() IntRect() { } ^ ../Source/WebCore/platform/graphics/cairo/IntRectCairo.cpp:34:43: error: no 'WebCore::IntRect::operator cairo_rectangle_int_t() const' member function declared in class 'WebCore::IntRect' IntRect::operator cairo_rectangle_int_t() const ^ make[1]: *** [Source/WebCore/platform/graphics/cairo/Programs_TestWebKitAPI_TestGtk-IntRectCairo.o] Error 1
Attachments
Patch
(1.33 KB, patch)
2013-04-07 10:08 PDT
,
Kalev Lember
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kalev Lember
Comment 1
2013-04-07 10:07:18 PDT
r136056
broke the build for some Windows ports that aren't the apple-win port. Looks like the config.h addition should be guarded by PLATFORM(WIN) instead of #ifdef(WIN32). The #undefs there don't make sense for GTK Windows port, at least.
Kalev Lember
Comment 2
2013-04-07 10:08:03 PDT
Created
attachment 196793
[details]
Patch
WebKit Commit Bot
Comment 3
2013-04-11 13:21:06 PDT
Comment on
attachment 196793
[details]
Patch Clearing flags on attachment: 196793 Committed
r148230
: <
http://trac.webkit.org/changeset/148230
>
WebKit Commit Bot
Comment 4
2013-04-11 13:21:09 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug