[GTK] Windows build failure after r136056 https://bugs.webkit.org/show_bug.cgi?id=114121

Patch by Kalev Lember <kalevlember@gmail.com> on 2013-04-11
Reviewed by Martin Robinson.

* TestWebKitAPI/config.h: Make sure defines are correct for other
Windows ports than apple-win.

Canonical link: https://commits.webkit.org/132843@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148230 268f45cc-cd09-0410-ab3c-d52691b4dbfc